--- a/index.html
+++ b/index.html
@@ -23,28 +23,38 @@
         <div class="container">
             <!-- Навигация -->
             <div class="nav-display">
-                <nav class="nav-container">
-                    <a href="./index.html" class="logo link"><span class="logo__accent">Web</span>Studio</a>
-                    <ul class="nav-list marker">
-                        <li class="nav-list__item"><a href="./index.html"
-                                class="nav-list__link link nav-list__link--active">Студия</a></li>
-                        <li class="nav-list__item"><a href="./portfolio.html" class="nav-list__link link">Портфолио</a>
+                <a href="./index.html" class="logo link"><span class="logo__accent">Web</span>Studio</a>
+                <button type="button" class="menu__button" aria-expanded="false" aria-controls="menu" data-menu-button>
+                    <svg width="40" height="40" class="menu__svg">
+                        <use href="./images/icons.svg#menu" class="menu__menu-icon"></use>
+                        <use href="./images/icons.svg#cross" class="menu__cross-icon"></use>
+                    </svg>
+                </button>
+                <div class="menu" data-menu>
+                    <nav class="nav-container">
+                        <ul class="nav-list marker">
+                            <li class="nav-list__item"><a href="./index.html"
+                                    class="nav-list__link link nav-list__link--active">Студия</a>
+                            </li>
+                            <li class="nav-list__item"><a href="./portfolio.html"
+                                    class="nav-list__link link">Портфолио</a>
+                            </li>
+                            <li class="nav-list__item"><a href="" class="nav-list__link link">Контакты</a></li>
+                        </ul>
+                    </nav>
+                    <!-- Контакты -->
+                    <ul class="contact-list marker">
+                        <li class="contact-list__item"><a href="mailto:info@devstudio.com"
+                                class="contact-list__link"><svg class="contact-list__mail-icon">
+                                    <use href="./images/icons.svg#mail"></use>
+                                </svg>info@devstudio.com</a>
                         </li>
-                        <li class="nav-list__item"><a href="" class="nav-list__link link">Контакты</a></li>
+                        <li class="contact-list__item"><a href="tel:+380961111111" class="contact-list__link"><svg
+                                    class="contact-list__tel-icon">
+                                    <use href="./images/icons.svg#tel"></use>
+                                </svg>+38 096 111 11 11</a></li>
                     </ul>
-                </nav>
-                <!-- Контакты -->
-                <ul class="contact-list marker">
-                    <li class="contact-list__item"><a href="mailto:info@devstudio.com" class="contact-list__link"><svg
-                                class="contact-list__mail-icon">
-                                <use href="./images/icons.svg#mail"></use>
-                            </svg>info@devstudio.com</a>
-                    </li>
-                    <li class="contact-list__item"><a href="tel:+380961111111" class="contact-list__link"><svg
-                                class="contact-list__tel-icon">
-                                <use href="./images/icons.svg#tel"></use>
-                            </svg>+38 096 111 11 11</a></li>
-                </ul>
+                </div>
             </div>
         </div>
     </header>
@@ -463,6 +473,7 @@
         </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
 </body>
 
 </html>
