--- a/portfolio.html
+++ b/portfolio.html
@@ -23,28 +23,46 @@
         <div class="container">
             <!-- Навигация -->
             <div class="nav-display">
-                <nav class="nav-container">
-                    <a href="./index.html" class="logo link"><span class="logo__accent">Web</span>Studio</a>
-                    <ul class="nav-list marker">
-                        <li class="nav-list__item"><a href="./index.html" class="nav-list__link link">Студия</a></li>
-                        <li class="nav-list__item"><a href="./portfolio.html"
-                                class="nav-list__link link nav-list__link--active">Портфолио</a>
+                <a href="./index.html" class="logo link"><span class="logo__accent">Web</span>Studio</a>
+                <button data-menu-button type="button" class="mobile-menu__button" aria-expanded="false"
+                    aria-controls="mobile-menu">
+                    <svg class="mobile-menu__svg" width="40" height="40">
+                        <use href="./images/icons.svg#menu" class="mobile-menu__menu-icon "></use>
+                        <use href="./images/icons.svg#cross" class="mobile-menu__cross-icon"></use>
+                    </svg>
+                </button>
+                <div class="mobile-menu" data-menu>
+                    <nav class="nav-container">
+                        <ul class="nav-list marker">
+                            <li class="nav-list__item"><a href="./index.html"
+                                    class="nav-list__link link nav-list__link--active">Студия</a>
+                            </li>
+                            <li class="nav-list__item"><a href="./portfolio.html"
+                                    class="nav-list__link link">Портфолио</a>
+                            </li>
+                            <li class="nav-list__item"><a href="" class="nav-list__link link">Контакты</a></li>
+                        </ul>
+                    </nav>
+                    <!-- Контакты -->
+                    <ul class="contact-list marker">
+                        <li class="contact-list__item"><a href="mailto:info@devstudio.com"
+                                class="contact-list__link"><svg class="contact-list__mail-icon">
+                                    <use href="./images/icons.svg#mail"></use>
+                                </svg>info@devstudio.com</a>
                         </li>
-                        <li class="nav-list__item"><a href="" class="nav-list__link link">Контакты</a></li>
+                        <li class="contact-list__item order"><a href="tel:+380961111111"
+                                class="contact-list__link mobile"><svg class="contact-list__tel-icon">
+                                    <use href="./images/icons.svg#tel"></use>
+                                </svg>+38 096 111 11 11</a></li>
                     </ul>
-                </nav>
-                <!-- Контакты -->
-                <ul class="contact-list marker">
-                    <li class="contact-list__item"><a href="mailto:info@devstudio.com" class="contact-list__link"><svg
-                                class="contact-list__mail-icon">
-                                <use href="./images/icons.svg#mail"></use>
-                            </svg>info@devstudio.com</a>
-                    </li>
-                    <li class="contact-list__item"><a href="tel:+380961111111" class="contact-list__link"><svg
-                                class="contact-list__tel-icon">
-                                <use href="./images/icons.svg#tel"></use>
-                            </svg>+38 096 111 11 11</a></li>
-                </ul>
+                    <!-- Список соц сетей -->
+                    <ul class="socials-header marker">
+                        <li class="socials-header__item"><a class="socials-header__link link" href="">Instagram</a></li>
+                        <li class="socials-header__item"><a class="socials-header__link link" href="">Twitter</a></li>
+                        <li class="socials-header__item"><a class="socials-header__link link" href="">Facebook</a></li>
+                        <li class="socials-header__item"><a class="socials-header__link link" href="">LinkedIn</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </header>
@@ -282,6 +300,7 @@
             </div>
         </div>
     </footer>
+    <script src="./js/mobile-menu.js"></script>
 </body>
 
 </html>
