Создает позиционирование для планшета и десктопа

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,11 +34,10 @@
                 <div class="mobile-menu" data-menu>
                     <nav class="nav-container">
                         <ul class="nav-list marker">
-                            <li class="nav-list__item"><a href="./index.html"
-                                    class="nav-list__link link nav-list__link--active">Студия</a>
+                            <li class="nav-list__item"><a href="./index.html" class="nav-list__link link ">Студия</a>
                             </li>
                             <li class="nav-list__item"><a href="./portfolio.html"
-                                    class="nav-list__link link">Портфолио</a>
+                                    class="nav-list__link link nav-list__link--active">Портфолио</a>
                             </li>
                             <li class="nav-list__item"><a href="" class="nav-list__link link">Контакты</a></li>
                         </ul>
@@ -83,7 +82,7 @@
                     <li class="portfolio-list__item">
                         <a class="link" href="">
                             <div class="portfolio-list__overlay">
-                                <img src="./images/Portfolio1.jpg" alt="Веб-сайт Технокряк" width="370">
+                                <img src="./images/Portfolio1.jpg" alt="Веб-сайт Технокряк" width="270">
                                 <p class="portfolio-list__block">Ресурс предлагает комплексные предложения с разным
                                     уровнем
                                     функционала и сервисов.
@@ -99,7 +98,7 @@
                     <li class="portfolio-list__item">
                         <a class="link" href="">
                             <div class="portfolio-list__overlay">
-                                <img src="./images/Portfolio2.jpg" alt="Два баскетболиста с мячем" width="370">
+                                <img src="./images/Portfolio2.jpg" alt="Два баскетболиста с мячем" width="270">
                                 <p class="portfolio-list__block">Ресурс предлагает комплексные предложения с разным
                                     уровнем
                                     функционала и сервисов.
@@ -115,7 +114,7 @@
                     <li class="portfolio-list__item">
                         <a class="link" href="">
                             <div class="portfolio-list__overlay">
-                                <img src="./images/Portfolio3.jpg" alt="Логотип Рыба с надписью" width="370">
+                                <img src="./images/Portfolio3.jpg" alt="Логотип Рыба с надписью" width="270">
                                 <p class="portfolio-list__block">Ресурс предлагает комплексные предложения с разным
                                     уровнем
                                     функционала и сервисов.
@@ -132,7 +131,7 @@
                     <li class="portfolio-list__item">
                         <a class="link" href="">
                             <div class="portfolio-list__overlay">
-                                <img src="./images/Portfolio4.jpg" alt="Наушники" width="370">
+                                <img src="./images/Portfolio4.jpg" alt="Наушники" width="270">
                                 <p class="portfolio-list__block">Ресурс предлагает комплексные предложения с разным
                                     уровнем
                                     функционала и сервисов.
@@ -149,7 +148,7 @@
                     <li class="portfolio-list__item">
                         <a class="link" href="">
                             <div class="portfolio-list__overlay">
-                                <img src="./images/Portfolio5.jpg" alt="Две коробки" width="370">
+                                <img src="./images/Portfolio5.jpg" alt="Две коробки" width="270">
                                 <p class="portfolio-list__block">Ресурс предлагает комплексные предложения с разным
                                     уровнем
                                     функционала и сервисов.
@@ -166,7 +165,7 @@
                     <li class="portfolio-list__item">
                         <a class="link" href="">
                             <div class="portfolio-list__overlay">
-                                <img src="./images/Portfolio6.jpg" alt="Веб-сайт с тёмным оформлением" width="370">
+                                <img src="./images/Portfolio6.jpg" alt="Веб-сайт с тёмным оформлением" width="270">
                                 <p class="portfolio-list__block">Ресурс предлагает комплексные предложения с разным
                                     уровнем
                                     функционала и сервисов.
@@ -183,7 +182,7 @@
                     <li class="portfolio-list__item">
                         <a class="link" href="">
                             <div class="portfolio-list__overlay">
-                                <img src="./images/Portfolio7.jpg" alt="Книга с картинками" width="370">
+                                <img src="./images/Portfolio7.jpg" alt="Книга с картинками" width="270">
                                 <p class="portfolio-list__block">Ресурс предлагает комплексные предложения с разным
                                     уровнем
                                     функционала и сервисов.
@@ -200,7 +199,7 @@
                     <li class="portfolio-list__item">
                         <a class="link" href="">
                             <div class="portfolio-list__overlay">
-                                <img src="./images/Portfolio8.jpg" alt="Бирка с надписью" width="370">
+                                <img src="./images/Portfolio8.jpg" alt="Бирка с надписью" width="270">
                                 <p class="portfolio-list__block">Ресурс предлагает комплексные предложения с разным
                                     уровнем
                                     функционала и сервисов.
@@ -217,7 +216,7 @@
                     <li class="portfolio-list__item">
                         <a class="link" href="">
                             <div class="portfolio-list__overlay">
-                                <img src="./images/Portfolio9.jpg" alt="Веб-сайт на ноутбуке" width="370">
+                                <img src="./images/Portfolio9.jpg" alt="Веб-сайт на ноутбуке" width="270">
                                 <p class="portfolio-list__block">Ресурс предлагает комплексные предложения с разным
                                     уровнем
                                     функционала и сервисов.
@@ -239,52 +238,55 @@
     <!-- Футер -->
     <footer class="footer-container">
         <div class="container footer-block">
-            <!-- КОНТАКТЫ -->
-            <div>
-                <a href="/" class="footer-logo link"><span class="footer-logo__accent">Web</span>Studio</a>
-                <address>
-                    <ul class="footer-list marker">
-                        <li class="footer-list__item"><a href="https://goo.gl/maps/ykcdLuCbSQXsH4zj8"
-                                class="footer-list__link footer-list__link--white link">г.
-                                Киев, пр-т Леси
-                                Украинки, 26</a></li>
-                        <li class="footer-list__item"><a href="mailto:info@example.com"
-                                class="footer-list__link link">info@example.com</a>
+            <div class="tablet-container">
+                <!-- КОНТАКТЫ -->
+                <div>
+                    <a href="/" class="footer-logo link"><span class="footer-logo__accent">Web</span>Studio</a>
+                    <address>
+                        <ul class="footer-list marker">
+                            <li class="footer-list__item"><a href="https://goo.gl/maps/ykcdLuCbSQXsH4zj8"
+                                    class="footer-list__link footer-list__link--white link">г.
+                                    Киев, пр-т Леси
+                                    Украинки, 26</a></li>
+                            <li class="footer-list__item"><a href="mailto:info@example.com"
+                                    class="footer-list__link link">info@example.com</a>
+                            </li>
+                            <li class="footer-list__item"><a href="tel:+380991111111" class="footer-list__link link">+38
+                                    099
+                                    111 1111</a></li>
+                        </ul>
+                    </address>
+                </div>
+                <!-- СОЦСЕТИ -->
+                <div class="connect">
+                    <h3 class="connect__title">Присоединяйтесь</h3>
+                    <ul class="connect__list marker">
+                        <li class="connect__item"><a href="" class="connect__link">
+                                <svg class="connect__icon">
+                                    <use href="./images/icons.svg#instagram"></use>
+                                </svg>
+                            </a>
                         </li>
-                        <li class="footer-list__item"><a href="tel:+380991111111" class="footer-list__link link">+38 099
-                                111 1111</a></li>
+                        <li class="connect__item"><a href="" class="connect__link">
+                                <svg class="connect__icon">
+                                    <use href="./images/icons.svg#twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="connect__item"><a href="" class="connect__link">
+                                <svg class="connect__icon">
+                                    <use href="./images/icons.svg#facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="connect__item"><a href="" class="connect__link">
+                                <svg class="connect__icon">
+                                    <use href="./images/icons.svg#linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
                     </ul>
-                </address>
-            </div>
-            <!-- СОЦСЕТИ -->
-            <div class="connect">
-                <h3 class="connect__title">Присоединяйтесь</h3>
-                <ul class="connect__list marker">
-                    <li class="connect__item"><a href="" class="connect__link">
-                            <svg class="connect__icon">
-                                <use href="./images/icons.svg#instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="connect__item"><a href="" class="connect__link">
-                            <svg class="connect__icon">
-                                <use href="./images/icons.svg#twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="connect__item"><a href="" class="connect__link">
-                            <svg class="connect__icon">
-                                <use href="./images/icons.svg#facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="connect__item"><a href="" class="connect__link">
-                            <svg class="connect__icon">
-                                <use href="./images/icons.svg#linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
+                </div>
             </div>
             <!-- ПОДПИСКА -->
             <div class="newsletter">
