--- a/index.html
+++ b/index.html
@@ -364,52 +364,55 @@
     <!-- Футер -->
     <footer class="footer-container">
         <div class="container footer-block">
-            <!-- КОНТАКТЫ -->
-            <div>
-                <a href="/" class="footer-logo link"><span class="footer-logo__accent">Web</span>Studio</a>
-                <address>
-                    <ul class="footer-list marker">
-                        <li class="footer-list__item"><a href="https://goo.gl/maps/ykcdLuCbSQXsH4zj8"
-                                class="footer-list__link footer-list__link--white link">г.
-                                Киев, пр-т Леси
-                                Украинки, 26</a></li>
-                        <li class="footer-list__item"><a href="mailto:info@example.com"
-                                class="footer-list__link link">info@example.com</a>
+            <div class="tablet-container">
+                <!-- КОНТАКТЫ -->
+                <div>
+                    <a href="/" class="footer-logo link"><span class="footer-logo__accent">Web</span>Studio</a>
+                    <address>
+                        <ul class="footer-list marker">
+                            <li class="footer-list__item"><a href="https://goo.gl/maps/ykcdLuCbSQXsH4zj8"
+                                    class="footer-list__link footer-list__link--white link">г.
+                                    Киев, пр-т Леси
+                                    Украинки, 26</a></li>
+                            <li class="footer-list__item"><a href="mailto:info@example.com"
+                                    class="footer-list__link link">info@example.com</a>
+                            </li>
+                            <li class="footer-list__item"><a href="tel:+380991111111" class="footer-list__link link">+38
+                                    099
+                                    111 1111</a></li>
+                        </ul>
+                    </address>
+                </div>
+                <!-- СОЦСЕТИ -->
+                <div class="connect">
+                    <h3 class="connect__title">Присоединяйтесь</h3>
+                    <ul class="connect__list marker">
+                        <li class="connect__item"><a href="" class="connect__link">
+                                <svg class="connect__icon">
+                                    <use href="./images/icons.svg#instagram"></use>
+                                </svg>
+                            </a>
                         </li>
-                        <li class="footer-list__item"><a href="tel:+380991111111" class="footer-list__link link">+38 099
-                                111 1111</a></li>
+                        <li class="connect__item"><a href="" class="connect__link">
+                                <svg class="connect__icon">
+                                    <use href="./images/icons.svg#twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="connect__item"><a href="" class="connect__link">
+                                <svg class="connect__icon">
+                                    <use href="./images/icons.svg#facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="connect__item"><a href="" class="connect__link">
+                                <svg class="connect__icon">
+                                    <use href="./images/icons.svg#linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
                     </ul>
-                </address>
-            </div>
-            <!-- СОЦСЕТИ -->
-            <div class="connect">
-                <h3 class="connect__title">Присоединяйтесь</h3>
-                <ul class="connect__list marker">
-                    <li class="connect__item"><a href="" class="connect__link">
-                            <svg class="connect__icon">
-                                <use href="./images/icons.svg#instagram"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="connect__item"><a href="" class="connect__link">
-                            <svg class="connect__icon">
-                                <use href="./images/icons.svg#twitter"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="connect__item"><a href="" class="connect__link">
-                            <svg class="connect__icon">
-                                <use href="./images/icons.svg#facebook"></use>
-                            </svg>
-                        </a>
-                    </li>
-                    <li class="connect__item"><a href="" class="connect__link">
-                            <svg class="connect__icon">
-                                <use href="./images/icons.svg#linkedin"></use>
-                            </svg>
-                        </a>
-                    </li>
-                </ul>
+                </div>
             </div>
             <!-- ПОДПИСКА -->
             <div class="newsletter">
