Добавляет разметку по изображениям

--- a/portfolio.html
+++ b/portfolio.html
@@ -82,7 +82,18 @@
                     <li class="portfolio-list__item">
                         <a class="link" href="">
                             <div class="portfolio-list__overlay">
-                                <img src="./images/Portfolio1.jpg" alt="Веб-сайт Технокряк" width="270">
+                                <picture>
+                                    <source srcset="
+                                ./images/mobile/card-1.jpg 1x,
+                                ./images/mobile/card-1@2x.jpg 2x," media="(max-width: 767px)">
+                                    <source srcset="
+                                ./images/desktop/card-1.jpg 1x,
+                                ./images/desktop/card-1@2x.jpg 2x" media="(min-width: 1200px)">
+                                    <source srcset="
+                                ./images/tablet/card-1.jpg 1x,
+                                ./images/tablet/card-1@2x.jpg 2x">
+                                    <img src="./images/Portfolio1.jpg" alt="Технокряк" />
+                                </picture>
                                 <p class="portfolio-list__block">Ресурс предлагает комплексные предложения с разным
                                     уровнем
                                     функционала и сервисов.
@@ -98,7 +109,18 @@
                     <li class="portfolio-list__item">
                         <a class="link" href="">
                             <div class="portfolio-list__overlay">
-                                <img src="./images/Portfolio2.jpg" alt="Два баскетболиста с мячем" width="270">
+                                <picture>
+                                    <source srcset="
+                                ./images/mobile/card-2.jpg 1x,
+                                ./images/mobile/card-2@2x.jpg 2x," media="(max-width: 767px)">
+                                    <source srcset="
+                                ./images/desktop/card-2.jpg 1x,
+                                ./images/desktop/card-2@2x.jpg 2x" media="(min-width: 1200px)">
+                                    <source srcset="
+                                ./images/tablet/card-2.jpg 1x,
+                                ./images/tablet/card-2@2x.jpg 2x">
+                                    <img src="./images/Portfolio2.jpg" alt="Нью Орлеан" />
+                                </picture>
                                 <p class="portfolio-list__block">Ресурс предлагает комплексные предложения с разным
                                     уровнем
                                     функционала и сервисов.
@@ -114,7 +136,18 @@
                     <li class="portfolio-list__item">
                         <a class="link" href="">
                             <div class="portfolio-list__overlay">
-                                <img src="./images/Portfolio3.jpg" alt="Логотип Рыба с надписью" width="270">
+                                <picture>
+                                    <source srcset="
+                                ./images/mobile/card-3.jpg 1x,
+                                ./images/mobile/card-3@2x.jpg 2x," media="(max-width: 767px)">
+                                    <source srcset="
+                                ./images/desktop/card-3.jpg 1x,
+                                ./images/desktop/card-3@2x.jpg 2x" media="(min-width: 1200px)">
+                                    <source srcset="
+                                ./images/tablet/card-3.jpg 1x,
+                                ./images/tablet/card-3@2x.jpg 2x">
+                                    <img src="./images/Portfolio3.jpg" alt="Ресторан Сифуд" />
+                                </picture>
                                 <p class="portfolio-list__block">Ресурс предлагает комплексные предложения с разным
                                     уровнем
                                     функционала и сервисов.
@@ -131,7 +164,18 @@
                     <li class="portfolio-list__item">
                         <a class="link" href="">
                             <div class="portfolio-list__overlay">
-                                <img src="./images/Portfolio4.jpg" alt="Наушники" width="270">
+                                <picture>
+                                    <source srcset="
+                                ./images/mobile/card-4.jpg 1x,
+                                ./images/mobile/card-4@2x.jpg 2x," media="(max-width: 767px)">
+                                    <source srcset="
+                                ./images/desktop/card-4.jpg 1x,
+                                ./images/desktop/card-4@2x.jpg 2x" media="(min-width: 1200px)">
+                                    <source srcset="
+                                ./images/tablet/card-4.jpg 1x,
+                                ./images/tablet/card-4@2x.jpg 2x">
+                                    <img src="./images/Portfolio4.jpg" alt="Проект Прайм" />
+                                </picture>
                                 <p class="portfolio-list__block">Ресурс предлагает комплексные предложения с разным
                                     уровнем
                                     функционала и сервисов.
@@ -148,7 +192,18 @@
                     <li class="portfolio-list__item">
                         <a class="link" href="">
                             <div class="portfolio-list__overlay">
-                                <img src="./images/Portfolio5.jpg" alt="Две коробки" width="270">
+                                <picture>
+                                    <source srcset="
+                                ./images/mobile/card-5.jpg 1x,
+                                ./images/mobile/card-5@2x.jpg 2x," media="(max-width: 767px)">
+                                    <source srcset="
+                                ./images/desktop/card-5.jpg 1x,
+                                ./images/desktop/card-5@2x.jpg 2x" media="(min-width: 1200px)">
+                                    <source srcset="
+                                ./images/tablet/card-5.jpg 1x,
+                                ./images/tablet/card-5@2x.jpg 2x">
+                                    <img src="./images/Portfolio5.jpg" alt="Проект Боксез" />
+                                </picture>
                                 <p class="portfolio-list__block">Ресурс предлагает комплексные предложения с разным
                                     уровнем
                                     функционала и сервисов.
@@ -165,7 +220,18 @@
                     <li class="portfolio-list__item">
                         <a class="link" href="">
                             <div class="portfolio-list__overlay">
-                                <img src="./images/Portfolio6.jpg" alt="Веб-сайт с тёмным оформлением" width="270">
+                                <picture>
+                                    <source srcset="
+                                ./images/mobile/card-6.jpg 1x,
+                                ./images/mobile/card-6@2x.jpg 2x," media="(max-width: 767px)">
+                                    <source srcset="
+                                ./images/desktop/card-6.jpg 1x,
+                                ./images/desktop/card-6@2x.jpg 2x" media="(min-width: 1200px)">
+                                    <source srcset="
+                                ./images/tablet/card-6.jpg 1x,
+                                ./images/tablet/card-6@2x.jpg 2x">
+                                    <img src="./images/Portfolio6.jpg" alt="Inspiration has no Borders" />
+                                </picture>
                                 <p class="portfolio-list__block">Ресурс предлагает комплексные предложения с разным
                                     уровнем
                                     функционала и сервисов.
@@ -182,7 +248,18 @@
                     <li class="portfolio-list__item">
                         <a class="link" href="">
                             <div class="portfolio-list__overlay">
-                                <img src="./images/Portfolio7.jpg" alt="Книга с картинками" width="270">
+                                <picture>
+                                    <source srcset="
+                                ./images/mobile/card-7.jpg 1x,
+                                ./images/mobile/card-7@2x.jpg 2x," media="(max-width: 767px)">
+                                    <source srcset="
+                                ./images/desktop/card-7.jpg 1x,
+                                ./images/desktop/card-7@2x.jpg 2x" media="(min-width: 1200px)">
+                                    <source srcset="
+                                ./images/tablet/card-7.jpg 1x,
+                                ./images/tablet/card-7@2x.jpg 2x">
+                                    <img src="./images/Portfolio7.jpg" alt="Издание Limited Edition" />
+                                </picture>
                                 <p class="portfolio-list__block">Ресурс предлагает комплексные предложения с разным
                                     уровнем
                                     функционала и сервисов.
@@ -199,7 +276,18 @@
                     <li class="portfolio-list__item">
                         <a class="link" href="">
                             <div class="portfolio-list__overlay">
-                                <img src="./images/Portfolio8.jpg" alt="Бирка с надписью" width="270">
+                                <picture>
+                                    <source srcset="
+                                ./images/mobile/card-8.jpg 1x,
+                                ./images/mobile/card-8@2x.jpg 2x," media="(max-width: 767px)">
+                                    <source srcset="
+                                ./images/desktop/card-8.jpg 1x,
+                                ./images/desktop/card-8@2x.jpg 2x" media="(min-width: 1200px)">
+                                    <source srcset="
+                                ./images/tablet/card-8.jpg 1x,
+                                ./images/tablet/card-8@2x.jpg 2x">
+                                    <img src="./images/Portfolio8.jpg" alt="Проект ЛАБ" />
+                                </picture>
                                 <p class="portfolio-list__block">Ресурс предлагает комплексные предложения с разным
                                     уровнем
                                     функционала и сервисов.
@@ -216,7 +304,18 @@
                     <li class="portfolio-list__item">
                         <a class="link" href="">
                             <div class="portfolio-list__overlay">
-                                <img src="./images/Portfolio9.jpg" alt="Веб-сайт на ноутбуке" width="270">
+                                <picture>
+                                    <source srcset="
+                                ./images/mobile/card-9.jpg 1x,
+                                ./images/mobile/card-9@2x.jpg 2x," media="(max-width: 767px)">
+                                    <source srcset="
+                                ./images/desktop/card-9.jpg 1x,
+                                ./images/desktop/card-9@2x.jpg 2x" media="(min-width: 1200px)">
+                                    <source srcset="
+                                ./images/tablet/card-9.jpg 1x,
+                                ./images/tablet/card-9@2x.jpg 2x">
+                                    <img src="./images/Portfolio9.jpg" alt="Growing Business" />
+                                </picture>
                                 <p class="portfolio-list__block">Ресурс предлагает комплексные предложения с разным
                                     уровнем
                                     функционала и сервисов.
