--- a/index.html
+++ b/index.html
@@ -159,7 +159,18 @@
                 <h2 class="section-title">Наша команда</h2>
                 <ul class="team__list marker">
                     <li class="team">
-                        <img src="./images/team1.jpg" alt="Игорь Демьяненко" width="270">
+                        <picture>
+                            <source srcset="
+                                ./images/mobile/team-1.jpg 1x,
+                                ./images/mobile/team-1@2x.jpg 2x," media="(max-width: 767px)">
+                            <source srcset="
+                                ./images/desktop/team-1.jpg 1x,
+                                ./images/desktop/team-1@2x.jpg 2x" media="(min-width: 1200px)">
+                            <source srcset="
+                                ./images/tablet/team-1.jpg 1x,
+                                ./images/tablet/team-1@2x.jpg 2x">
+                            <img src="./images/team1.jpg" alt="Игорь Демьяненко" />
+                        </picture>
                         <div class="team__container">
                             <h3 class="team__name">Игорь Демьяненко</h3>
                             <p>Product Designer</p>
@@ -196,7 +207,18 @@
                         </div>
                     </li>
                     <li class="team">
-                        <img src="./images/team2.jpg" alt="Ольга Репина" width="270">
+                        <picture>
+                            <source srcset="
+                                ./images/mobile/team-2.jpg 1x,
+                                ./images/mobile/team-2@2x.jpg 2x," media="(max-width: 767px)">
+                            <source srcset="
+                                ./images/desktop/team-2.jpg 1x,
+                                ./images/desktop/team-2@2x.jpg 2x" media="(min-width: 1200px)">
+                            <source srcset="
+                                ./images/tablet/team-2.jpg 1x,
+                                ./images/tablet/team-2@2x.jpg 2x">
+                            <img src="./images/team2.jpg" alt="Ольга Репина" />
+                        </picture>
                         <div class="team__container">
                             <h3 class="team__name">Ольга Репина</h3>
                             <p>Frontend Developer</p>
@@ -233,7 +255,18 @@
                         </div>
                     </li>
                     <li class="team">
-                        <img src="./images/team3.jpg" alt="Николай Тарасов" width="270">
+                        <picture>
+                            <source srcset="
+                                ./images/mobile/team-3.jpg 1x,
+                                ./images/mobile/team-3@2x.jpg 2x," media="(max-width: 767px)">
+                            <source srcset="
+                                ./images/desktop/team-3.jpg 1x,
+                                ./images/desktop/team-3@2x.jpg 2x" media="(min-width: 1200px)">
+                            <source srcset="
+                                ./images/tablet/team-3.jpg 1x,
+                                ./images/tablet/team-3@2x.jpg 2x">
+                            <img src="./images/team3.jpg" alt="Николай Тарасов" />
+                        </picture>
                         <div class="team__container">
                             <h3 class="team__name">Николай Тарасов</h3>
                             <p>Marketing</p>
@@ -270,7 +303,18 @@
                         </div>
                     </li>
                     <li class="team">
-                        <img src="./images/team4.jpg" alt="Михаил Ермаков" width="270">
+                        <picture>
+                            <source srcset="
+                                ./images/mobile/team-4.jpg 1x,
+                                ./images/mobile/team-4@2x.jpg 2x," media="(max-width: 767px)">
+                            <source srcset="
+                                ./images/desktop/team-4.jpg 1x,
+                                ./images/desktop/team-4@2x.jpg 2x" media="(min-width: 1200px)">
+                            <source srcset="
+                                ./images/tablet/team-4.jpg 1x,
+                                ./images/tablet/team-4@2x.jpg 2x">
+                            <img src="./images/team4.jpg" alt="Михаил Ермаков" />
+                        </picture>
                         <div class="team__container">
                             <h3 class="team__name">Михаил Ермаков</h3>
                             <p>UI Designer</p>
