Подключает якорь со скролом на ссылку контакты

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="При написании метаописания оставьте его длиной от 140 до 160 символов, чтобы Google мог отобразить ваше сообщение целиком. Не забудьте указать ключевое слово!">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,7 +42,7 @@
                             <li class="nav-list__item"><a href="./portfolio.html"
                                     class="nav-list__link link">Портфолио</a>
                             </li>
-                            <li class="nav-list__item"><a href="" class="nav-list__link link">Контакты</a></li>
+                            <li class="nav-list__item"><a href="#footer" class="nav-list__link link">Контакты</a></li>
                         </ul>
                     </nav>
                     <!-- Контакты -->
@@ -407,7 +409,7 @@
     </main>
     <!-- Футер -->
     <footer class="footer-container">
-        <div class="container footer-block">
+        <div class="container footer-block" id="footer">
             <div class="tablet-container">
                 <!-- КОНТАКТЫ -->
                 <div>
