Добавляет скролл для портфолио

--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
                             <li class="nav-list__item"><a href="./portfolio.html"
                                     class="nav-list__link link nav-list__link--active">Портфолио</a>
                             </li>
-                            <li class="nav-list__item"><a href="" class="nav-list__link link">Контакты</a></li>
+                            <li class="nav-list__item"><a href="#footer" class="nav-list__link link">Контакты</a></li>
                         </ul>
                     </nav>
                     <!-- Контакты -->
@@ -336,7 +336,7 @@
 
     <!-- Футер -->
     <footer class="footer-container">
-        <div class="container footer-block">
+        <div class="container footer-block" id="footer">
             <div class="tablet-container">
                 <!-- КОНТАКТЫ -->
                 <div>
