--- a/index.html
+++ b/index.html
@@ -163,15 +163,15 @@
                     <li class="team">
                         <picture>
                             <source srcset="
-                                ../../images/mobile/team-1.jpg 1x,
-                                ../../images/mobile/team-1@2x.jpg 2x," media="(max-width: 767px)">
+                                ./images/mobile/team-1.jpg 1x,
+                                ./images/mobile/team-1@2x.jpg 2x," media="(max-width: 767px)">
                             <source srcset="
-                                ../../images/desktop/team-1.jpg 1x,
-                                ../../images/desktop/team-1@2x.jpg 2x" media="(min-width: 1200px)">
+                                ./images/desktop/team-1.jpg 1x,
+                                ./images/desktop/team-1@2x.jpg 2x" media="(min-width: 1200px)">
                             <source srcset="
-                                ../../images/tablet/team-1.jpg 1x,
-                                ../../images/tablet/team-1@2x.jpg 2x">
-                            <img src="../../images/team1.jpg" alt="Игорь Демьяненко" />
+                                ./images/tablet/team-1.jpg 1x,
+                                ./images/tablet/team-1@2x.jpg 2x">
+                            <img src="images/team1.jpg" alt="Игорь Демьяненко" />
                         </picture>
                         <div class="team__container">
                             <h3 class="team__name">Игорь Демьяненко</h3>
