--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             <source srcset="
                                 ./images/tablet/team-1.jpg 1x,
                                 ./images/tablet/team-1@2x.jpg 2x">
-                            <img src="images/team1.jpg" alt="Игорь Демьяненко" />
+                            <img src="./images/team1.jpg" alt="Игорь Демьяненко" />
                         </picture>
                         <div class="team__container">
                             <h3 class="team__name">Игорь Демьяненко</h3>
@@ -212,7 +212,7 @@
                         <picture>
                             <source srcset="
                                 ./images/mobile/team-2.jpg 1x,
-                                ./images/mobile/team-2@2x.jpg 2x," media="(max-width: 767px)">
+                                ./images/mobile/team-2@2x.jpg 2x" media="(max-width: 767px)">
                             <source srcset="
                                 ./images/desktop/team-2.jpg 1x,
                                 ./images/desktop/team-2@2x.jpg 2x" media="(min-width: 1200px)">
