--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                             <source srcset="
                                 ./images/tablet/team1.jpg 1x,
                                 ./images/tablet/team1@2x.jpg 2x">
-                            <img src="./images/team1.jpg" alt="Игорь Демьяненко" />
+                            <img src="images/team1.jpg" alt="Игорь Демьяненко" />
                         </picture>
                         <div class="team__container">
                             <h3 class="team__name">Игорь Демьяненко</h3>
