--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
                     <li class="team">
                         <picture>
                             <source srcset="
-                                images/mobile/team1.jpg 1x,
-                                images/mobile/team1@2x.jpg 2x," media="(max-width: 767px)">
+                                ./images/mobile/team1.jpg 1x,
+                                ./images/mobile/team1@2x.jpg 2x" media="(max-width: 767px)">
                             <source srcset="
-                                images/desktop/team1.jpg 1x,
-                                images/desktop/team1@2x.jpg 2x" media="(min-width: 1200px)">
+                                ./images/desktop/team1.jpg 1x,
+                                ./images/desktop/team1@2x.jpg 2x" media="(min-width: 1200px)">
                             <source srcset="
                                 images/tablet/team1.jpg 1x,
                                 images/tablet/team1@2x.jpg 2x">
