--- a/index.html
+++ b/index.html
@@ -134,20 +134,38 @@
             <div class="container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="examples-list marker">
-                    <li class="examples-list__item"><a href=""><img src="./images/example1.jpg"
-                                alt="планшет и клавиатура" width="370"></a>
+                    <li class="examples-list__item"><a href="">
+                            <picture>
+                                <source srcset="
+                                ./images/mobile/example-1.jpg 1x,
+                                ./images/mobile/example-1@2x.jpg 2x">
+                                <img src="./images/example1.jpg" alt="Пример 1" />
+                            </picture>
+                        </a>
                         <div class="examples-list__text">
                             <p>Десктопные приложения</p>
                         </div>
                     </li>
-                    <li class="examples-list__item"><a href=""><img src="./images/example2.jpg"
-                                alt="ноутбук с телефоном" width="370"></a>
+                    <li class="examples-list__item"><a href="">
+                            <picture>
+                                <source srcset="
+                                ./images/mobile/example-2.jpg 1x,
+                                ./images/mobile/example-2@2x.jpg 2x">
+                                <img src="./images/example2.jpg" alt="Пример 1" />
+                            </picture>
+                        </a>
                         <div class="examples-list__text">
                             <p>Мобильные приложения</p>
                         </div>
                     </li>
-                    <li class="examples-list__item"><a href=""><img src="./images/example3.jpg"
-                                alt="градиент цветов на планшете" width="370"></a>
+                    <li class="examples-list__item"><a href="">
+                            <picture>
+                                <source srcset="
+                                ./images/mobile/example-3.jpg 1x,
+                                ./images/mobile/example-3@2x.jpg 2x">
+                                <img src="./images/example3.jpg" alt="Пример 1" />
+                            </picture>
+                        </a>
                         <div class="examples-list__text">
                             <p>Дизайнерские решения</p>
                         </div>
