--- a/index.html
+++ b/index.html
@@ -137,9 +137,10 @@
                     <li class="examples-list__item"><a href="">
                             <picture>
                                 <source srcset="
-                                ./images/desktop/example-1.jpg 1x,
-                                ./images/desktop/example-1@2x.jpg 2x">
-                                <img src="./images/example1.jpg" alt="Пример 1" />
+                                    ./images/desktop/example-1.jpg 1x, 
+                                    ./images/desktop/example-1@2x.jpg 2x
+                                    ">
+                                <img src="images/example1.jpg" alt="Разработчик пишет код" width="370" />
                             </picture>
                         </a>
                         <div class="examples-list__text">
@@ -149,9 +150,10 @@
                     <li class="examples-list__item"><a href="">
                             <picture>
                                 <source srcset="
-                                ./images/desktop/example-2.jpg 1x,
-                                ./images/desktop/example-2@2x.jpg 2x">
-                                <img src="./images/example2.jpg" alt="Пример 1" />
+                                    ./images/desktop/example-2.jpg 1x, 
+                                    ./images/desktop/example-2@2x.jpg 2x
+                                    ">
+                                <img src="images/example2.jpg" alt="Разработчик пишет код" width="370" />
                             </picture>
                         </a>
                         <div class="examples-list__text">
@@ -161,9 +163,10 @@
                     <li class="examples-list__item"><a href="">
                             <picture>
                                 <source srcset="
-                                ./images/desktop/example-3.jpg 1x,
-                                ./images/desktop/example-3@2x.jpg 2x">
-                                <img src="./images/example3.jpg" alt="Пример 1" />
+                                    ./images/desktop/example-3.jpg 1x, 
+                                    ./images/desktop/example-3@2x.jpg 2x
+                                    ">
+                                <img src="images/example3.jpg" alt="Разработчик пишет код" width="370" />
                             </picture>
                         </a>
                         <div class="examples-list__text">
