Фиксит мобильное меню

--- a/index.html
+++ b/index.html
@@ -45,25 +45,31 @@
                             <li class="nav-list__item"><a href="#footer" class="nav-list__link link">Контакты</a></li>
                         </ul>
                     </nav>
-                    <!-- Контакты -->
-                    <ul class="contact-list marker">
-                        <li class="contact-list__item"><a href="mailto:info@devstudio.com"
-                                class="contact-list__link"><svg class="contact-list__mail-icon">
-                                    <use href="./images/icons.svg#mail"></use>
-                                </svg>info@devstudio.com</a>
-                        </li>
-                        <li class="contact-list__item order"><a href="tel:+380961111111"
-                                class="contact-list__link mobile"><svg class="contact-list__tel-icon">
-                                    <use href="./images/icons.svg#tel"></use>
-                                </svg>+38 096 111 11 11</a></li>
-                    </ul>
-                    <!-- Список соц сетей -->
-                    <ul class="socials-header marker">
-                        <li class="socials-header__item"><a class="socials-header__link link" href="">Instagram</a></li>
-                        <li class="socials-header__item"><a class="socials-header__link link" href="">Twitter</a></li>
-                        <li class="socials-header__item"><a class="socials-header__link link" href="">Facebook</a></li>
-                        <li class="socials-header__item"><a class="socials-header__link link" href="">LinkedIn</a></li>
-                    </ul>
+                    <div class="footer-header">
+                        <!-- Контакты -->
+                        <ul class="contact-list marker">
+                            <li class="contact-list__item"><a href="mailto:info@devstudio.com"
+                                    class="contact-list__link"><svg class="contact-list__mail-icon">
+                                        <use href="./images/icons.svg#mail"></use>
+                                    </svg>info@devstudio.com</a>
+                            </li>
+                            <li class="contact-list__item order"><a href="tel:+380961111111"
+                                    class="contact-list__link mobile"><svg class="contact-list__tel-icon">
+                                        <use href="./images/icons.svg#tel"></use>
+                                    </svg>+38 096 111 11 11</a></li>
+                        </ul>
+                        <!-- Список соц сетей -->
+                        <ul class="socials-header marker">
+                            <li class="socials-header__item"><a class="socials-header__link link" href="">Instagram</a>
+                            </li>
+                            <li class="socials-header__item"><a class="socials-header__link link" href="">Twitter</a>
+                            </li>
+                            <li class="socials-header__item"><a class="socials-header__link link" href="">Facebook</a>
+                            </li>
+                            <li class="socials-header__item"><a class="socials-header__link link" href="">LinkedIn</a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
